--- a/app/src/index.html
+++ b/app/src/index.html
@@ -25,6 +25,7 @@
       <br>
       <h1>Look up a Star</h1>
       <br><label for="name">Star ID:</label><input type="text" id="lookid"></input>
+      <br><h3 id="lookupName"></h3>
       <br><br><button onclick="App.lookUp()">Look Up a Star</button>
       <hr>
       <br>
